// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template creates with defaults 1`] = `
Array [
  ".gitignore",
  "LICENSE",
  "README.md",
  "lib/index.js",
  "package.json",
]
`;

exports[`template creates with defaults 2`] = `
Object {
  "description": "superb",
  "files": Array [
    "lib",
  ],
  "license": "MIT",
  "name": "dist",
  "scripts": Object {},
  "version": "0.0.0",
}
`;

exports[`template creates with jest 1`] = `
Object {
  "description": "superb",
  "files": Array [
    "lib",
  ],
  "license": "MIT",
  "name": "dist",
  "scripts": Object {
    "prepare": "npm test",
    "test": "jest",
    "test:coverage": "jest --coverage",
    "test:watch": "jest --watch --notify",
  },
  "version": "0.0.0",
}
`;

exports[`template creates with recommended & jest 1`] = `
Object {
  "description": "superb",
  "files": Array [
    "lib",
  ],
  "license": "MIT",
  "name": "dist",
  "scripts": Object {
    "lint": "recommended",
    "lint:fix": "recommended --fix",
    "prepare": "npm run lint && npm test",
    "test": "jest",
    "test:coverage": "jest --coverage",
    "test:watch": "jest --watch --notify",
  },
  "version": "0.0.0",
}
`;

exports[`template creates with recommended 1`] = `
Object {
  "description": "superb",
  "files": Array [
    "lib",
  ],
  "license": "MIT",
  "name": "dist",
  "scripts": Object {
    "lint": "recommended",
    "lint:fix": "recommended --fix",
    "prepare": "npm run lint",
  },
  "version": "0.0.0",
}
`;
